# 0.033
# stable version
# subsession file progress ✅
# session progress WIP
# Formatted time display

# 0.032
# Dashboard displays session count
# Dashboard displays subsession count 
# UI/UX changes, add subsession introduced
# Dashboard displays unique room count
# Dashboard displays user count
# Dashboard displays file count

# 0.031
# [View User] Download files works
# [View User] Upload works and assigns files to correct subsession 
# [View User] Trash bin icon deletes files from server
# UI/UX Updates

# 0.030
# Displaying correct file names, not downloadable yet
# UX/UI changes, pt 2
# implementing js-file-download

# 0.029
# UI/UX/ API merge stable
# Building file download API
# File list WIP

# 0.028
# Merging code back with dev server
# Fixing navbar state mgmt bug 
# Re-launched local dev server

# 0.027 State bug with Nav not storing user properly.
# Added new [homepage] after login, need to reevaulate user auth
# Need to implement state management.

# 0.026
# Created Registration Form. API not configured yet.
# Working on Registration API.
# Registration API Complete. Users can register.

# 0.025
# Merging code from live server to fix SPA glitch from previous version
# [Register] page created. API not built yet.
# Logout not configured properly after merging code.
# Login bug fixed where it bypassed login API and allowed anyone to log in.

# 0.024
# Merging to AWS
# Buggy version
# The merge to AWS broke the react app due to how the Browser Routing was was set up on the test server.
# It was not compatible with single page mode on the build mode.
# Being stiched together on a new project file before being meged in.
# API connection changes to reflect live server config

# 0.023
# Introduced Logout API.
# [Login] available, then grants access to ALL pages
# [Home] not rendering BEFORE LOGIN due to state bug. 
# Upon logout, [home] not rendering due to stae bug.
# Buggy version 

# 0.022